[tool.poetry]
name = "repl_python3_DangerousCreativeEnvironments"
version = "0.1.0"
description = ""
authors = ["jd312432 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
astroquery = "^0.4.5"
streamlit = "^1.7.0"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
